# photon-sphere

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE.md  README.md  build.js  package-lock.json  package.json  pnpm-lock.yaml
scripts/: build-web.cjs  build.cjs  generate-shape-examples.cjs
scripts/utils/: blue-print.cjs  utils.cjs
src/: index.js  photon-sphere.js
src/arc-shapes/: draw-bevelled-edge-path.js  draw-comet-bevelled-tail-path.js  draw-comet-path.js  draw-comet-tail-path.js  draw-edge-path.js  draw-meteor-path.js  draw-rounded-path.js  draw-uniform-path.js  index.js
src/utils/: constants.js  formulas.js  path-command.js  utils.js
test/: test.cjs  test.js  wasm.cjs
types/: photon-sphere.d.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  main.rs  photon_sphere.rs
wasm/src/arc_shape/: draw_bevelled_edge_path.rs  draw_comet_bevelled_tail_path.rs  draw_comet_path.rs  draw_comet_tail_path.rs  draw_edge_path.rs  draw_meteor_path.rs  draw_rounded_path.rs  draw_uniform_path.rs  mod.rs
wasm/src/util/: constant.rs  formula.rs  mod.rs  path_command.rs
web/: blue-print.js  generator.js  index.html  style.css
www/: CNAME  demo.html  generator.html  index.html
www/scripts/: a9ebcda0cdf5030e.wasm  demo.js  generator.js  index.js  photon-sphere.min.js  worker.js
www/styles/: components.css  demo.css  generator.css  global.css  home.css  pages.css  style.css
