[package]
name = "photon-sphere-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
void = "1.0.2"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[profile.release]
lto = true
